# UnderWaterHexapodRobot

./: README.md
1.3D model/model/: Body.SLDPRT  CRAB_0805.SLDASM  LF_Link_1.SLDPRT  LF_Link_2.SLDPRT  LF_Link_3.SLDPRT  LH_Link_1.SLDPRT  LH_Link_2.SLDPRT  LH_Link_3.SLDPRT  LM_Link_1.SLDPRT  LM_Link_2.SLDPRT  LM_Link_3.SLDPRT  RF_Link_1.SLDPRT  RF_Link_2.SLDPRT  RF_Link_3.SLDPRT  RH_Link_1.SLDPRT  RH_Link_2.SLDPRT  RH_Link_3.SLDPRT  RM_Link_1.SLDPRT  (+3 more)
3.Sofrware&Firmware/: 步态数据.txt
3.Sofrware&Firmware/UnderWaterHexapodRobot/CRAB_0805/: CMakeLists.txt  package.xml
3.Sofrware&Firmware/UnderWaterHexapodRobot/CRAB_0805/config/: joint_names_CRAB_0805.yaml
3.Sofrware&Firmware/UnderWaterHexapodRobot/CRAB_0805/launch/: display.launch  gazebo.launch
3.Sofrware&Firmware/UnderWaterHexapodRobot/CRAB_0805/meshes/: LB_JIAN_LINK.STL  LB_R_LINK.STL  LB_XI_LINK.STL  LB_Y_LINK.STL  LB_ZHOU_LINK.STL  LF_JIAN_LINK.STL  LF_P_LINK.STL  LF_R_LINK.STL  LF_XI_LINK.STL  LF_Y_LINK.STL  LF_ZHOU_LINK.STL  LM_JIAN_LINK.STL  LM_P_LINK.STL  LM_R_LINK.STL  LM_XI_LINK.STL  LM_Y_LINK.STL  LM_ZHOU_LINK.STL  RB_JIAN_LINK.STL  RB_P_LINK.STL  RB_XI_LINK.STL  RB_Y_LINK.STL  RB_ZHOU_LINK.STL  RF_JIAN_LINK.STL  RF_P_LINK.STL  RF_R_LINK.STL  RF_XI_LINK.STL  RF_ZHOU_LINK.STL  RM_JIAN_LINK.STL  RM_P_LINK.STL  RM_R_LINK.STL  RM_XI_LINK.STL  RM_Y_LINK.STL  RM_ZHOU_LINK.STL  base_link.STL
3.Sofrware&Firmware/UnderWaterHexapodRobot/CRAB_0805/src/: CRAB_0805.cpp  CRAB_0805_FluctuateStep.cpp  CRAB_0805_FluctuateStepHor.cpp
3.Sofrware&Firmware/UnderWaterHexapodRobot/CRAB_0805/urdf/: CRAB_0805.csv  CRAB_0805.urdf
(+5 files in other folders)
